--- a/static/index.html
+++ b/static/index.html
@@ -1,20 +1,10 @@
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>React-Redux-Flask</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="/src/images/favicon.png"/>
-    <link rel="stylesheet" type="text/css" href="/dist/bundle.css"/>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-
-</head>
-
-<body>
-<div id="root"></div>
-</body>
-
-<script src="/dist/bundle.js"></script>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="mobile-web-app-capable" content="yes"><link rel="icon" href={{
+    url_for('static', filename='favicon.ico') }}/><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><title>Should I Stay?</title><meta name="apple-mobile-web-app-title" content="React Boilerplate"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="default"/><meta name="theme-color" content="#b1624d"/><link rel="apple-touch-icon" sizes="180x180" href={{
+        url_for('static', filename='icon_180x180.33285f999db78beed5640085c051e7b1.png') }}/><link rel="apple-touch-icon" sizes="167x167" href={{
+            url_for('static', filename='icon_167x167.9085aba6ea24073fba72a94b7ac731a1.png') }}/><link rel="apple-touch-icon" sizes="152x152" href={{
+            url_for('static', filename='icon_152x152.80d43cecdc663299328632b85127117b.png') }}/><link rel="apple-touch-icon" sizes="120x120" href={{
+                url_for('static', filename='icon_120x120.2f7752bee9dcd06e998fd44640e47485.png') }}/><link rel="manifest" href={{
+            url_for('static', filename='manifest.47e77a2731a1bb975ed19ced8741b946.json') }}/></head><body><noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JS</strong> to make this app work.</noscript><div id="app"></div><script type="text/javascript" src={{
+                url_for('static', filename='runtime~main.b6ad9ed301cc83f945fd.js') }}></script><script type="text/javascript" src={{
+    url_for('static', filename='vendor.4e09edc8e94bec598c3c.chunk.js') }}></script><script type="text/javascript" src={{
+    url_for('static', filename='main.b8b7a9e88480cdff8928.chunk.js') }}></script></body></html>
